[package]
name = "fish"
version = "0.1.0"
authors = ["Will Johnston <wbjohnston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.4.0", features=["full"]}
serde = "1.0.125"
serde_json = "1.0.64"
websocket = "0.26.2"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
warp = "0.3.1"
futures = "0.3.13"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "uuid", "macros", "chrono", "json" ] }
rust-argon2 = "0.8"
uuid = {version = "0.8.2", features = ["serde"]}
lazy_static = "1.4.0"
rand = "0.8.3"
itertools = "0.10.0"
